[package]
name = "preference-splitting"
version = "0.1.0"
authors = ["Patrick Singer", "Florian Barth"]
edition = "2018"

[dependencies]
ordered-float = "1.0.2"
lp-modeler = "0.3.3"
roxmltree = "0.7.*"
serde_json = "1.*"
serde = {version = "1.*", features = ["derive"]}
geojson = "0.16.*"
chrono = "0.4.*"
indicatif = "0.13.*"