[package]
name = "preference-splitting"
version = "0.1.0"
authors = ["Patrick Singer", "Florian Barth"]
edition = "2018"

[dependencies]
ordered-float = "1.0.2"
lp-modeler = {version = "^0.4.3", git = "https://github.com/lesstat/rust-lp-modeler", branch = "no-file-io" }
roxmltree = "0.7.*"
serde_json = "1.*"
serde = {version = "1.*", features = ["derive"]}
geojson = "0.16.*"
chrono = "0.4.*"
indicatif = "0.13.*"
rayon = "1.*"
osmpbfreader = "0.13.0"
structopt = "^0.3"
rand = "^0.7"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "dijkstra_bench"
harness = false