[package]
name = "ppts"
version = "0.1.0"
authors = ["Florian Barth", "Claudius Proissl", "Patrick Singer"]
edition = "2018"

[features]
default = []
debug = []

[dependencies]
ordered-float = "1.0.2"
roxmltree = "0.7.*"
serde_json = "1.*"
serde = {version = "1.*", features = ["derive"]}
geojson = "0.16.*"
chrono = "0.4.*"
indicatif = "0.13.*"
rayon = "1.*"
osmpbfreader = "0.13.0"
structopt = "^0.3"
rand = "^0.7"
crossbeam = "^0.7"
glpk-sys = "^0.2"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "dijkstra_bench"
harness = false
